--- a/python4ml.ipynb
+++ b/python4ml.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNt8JKWPuOuzaTCiV2Wwr+9",
+      "authorship_tag": "ABX9TyPUav+2LnLAEjLjIUVP2bQg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,9 +38,9 @@
           "height": 73
         },
         "id": "4q0bJXWN6MtY",
-        "outputId": "58c7d110-6214-486d-97ab-c09b3f6360d2"
+        "outputId": "67c306ec-3aad-4dbc-ec1b-85b3270c11b2"
       },
-      "execution_count": 4,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "display_data",
@@ -50,9 +50,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-68fa63fe-f375-4c7d-9276-1b909cee66c1\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-602e7f03-ceb8-4da8-b6c6-88a8bcbc3bac\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-68fa63fe-f375-4c7d-9276-1b909cee66c1\">\n",
+              "     <output id=\"result-602e7f03-ceb8-4da8-b6c6-88a8bcbc3bac\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -253,7 +253,7 @@
       "metadata": {
         "id": "rQ7iTfhw4bFi"
       },
-      "execution_count": 6,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -264,7 +264,7 @@
       "metadata": {
         "id": "wVW0tRP27WIY"
       },
-      "execution_count": 8,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -273,14 +273,14 @@
         "df.head()"
       ],
       "metadata": {
+        "id": "ldcHIlSk7xjn",
+        "outputId": "67fdc217-3c8c-4082-bdc8-be0bc02f087a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        },
-        "id": "ldcHIlSk7xjn",
-        "outputId": "658e6ff4-109f-48a2-ae20-a45c9abb9b1c"
+        }
       },
-      "execution_count": 9,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -309,7 +309,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-9746243a-4301-4613-87c9-6f1f548b920d\">\n",
+              "  <div id=\"df-34664632-6f4c-4d65-9e6a-9e6ef3d95d67\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -422,7 +422,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9746243a-4301-4613-87c9-6f1f548b920d')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-34664632-6f4c-4d65-9e6a-9e6ef3d95d67')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -473,12 +473,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-9746243a-4301-4613-87c9-6f1f548b920d button.colab-df-convert');\n",
+              "          document.querySelector('#df-34664632-6f4c-4d65-9e6a-9e6ef3d95d67 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-9746243a-4301-4613-87c9-6f1f548b920d');\n",
+              "          const element = document.querySelector('#df-34664632-6f4c-4d65-9e6a-9e6ef3d95d67');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -501,7 +501,141 @@
             ]
           },
           "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tUKAA9W1iTu0",
+        "outputId": "00759b9d-0430-4c49-bde8-000ee57d8cc6"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(60943, 12)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df['Y2017'].mean()\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xRPDC5k1i9hV",
+        "outputId": "64e2517d-ec25-4a5c-a02c-30a1ab96a311"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "140.9177648602722"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df['Y2017'].std()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "B5iRGrwYjanV",
+        "outputId": "abd52d17-85f5-40ed-9dd0-13c124f67c3b"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1671.8623590567995"
+            ]
+          },
+          "metadata": {},
           "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Which year had the least correlation with ‘Element Code’?"
+      ],
+      "metadata": {
+        "id": "PAVUwJW8E_gD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import matplotlib.pyplot as plt"
+      ],
+      "metadata": {
+        "id": "sKuHKSROFDg8"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.figure(figsize=(7,4))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        },
+        "id": "iNta_pdmFUgt",
+        "outputId": "8824d261-3547-4cd0-c47a-26d545c95720"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<Figure size 504x288 with 0 Axes>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<Figure size 504x288 with 0 Axes>"
+            ]
+          },
+          "metadata": {}
         }
       ]
     }
